# InventoryInjector-1.5

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/Hooks/: MovieManager.cpp
src/SKSEPlugin/: SKSEPlugin.cpp
tools/Modules/: SKSEPlugin.cmake
